basic canvas and movement for snake

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   <input type="checkbox" id="trail" checked>
   <label for="trail">Toggle Trails</label>
   </br>
-  <input type="checkbox" id="stop-sim">
-  <label for="stop-sim">Stop simulation</label> -->
+   -->
+  <input type="checkbox" id="pause-game">
+  <label for="pause-game">Pause game</label>
   <main>
     <script src="point.js"></script>
     <script src="sketch.js"></script>
