--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Starfield Simulation</title>
+  <title>Snake!</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <script src="p5.min.js"></script>
@@ -29,7 +29,7 @@
   <input type="checkbox" id="pause-game">
   <label for="pause-game">Pause game</label>
   <main>
-    <script src="point.js"></script>
+    <script src="snake.js"></script>
     <script src="sketch.js"></script>
   </main>
 </body>
