snake can't move back on itself, added food that extends snake length, added collision detection with walls and snake itself

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <label for="pause-game">Pause game</label>
   <main>
     <script src="snake.js"></script>
+    <script src="food.js"></script>
     <script src="sketch.js"></script>
   </main>
 </body>
