added pause/resume button, score, high score, and snake now resets in center with food also getting a new location when game resets

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   <label for="trail">Toggle Trails</label>
   </br>
    -->
-  <input type="checkbox" id="pause-game">
-  <label for="pause-game">Pause game</label>
+   <button id="game-toggle"> Start game </button>
   <main>
     <script src="snake.js"></script>
     <script src="food.js"></script>
